<resources>
    <string name="app_name">ProjectSchool</string>
    <string name="SignIn">Вход</string>
    <string name="tfPass">Пароль</string>
    <string name="tfNameAcc">Имя аккаунта</string>
    <string name="SignInLower">Войти</string>
    <string name="btnAccCr">Создать аккаунт</string>
    <string name="hintReg">Ещё не зарегистрировались?</string>
    <string name="registerText">Регистрация</string>
    <string name="name">Имя</string>
    <string name="surname">Фамилия</string>
    <string name="AccName">Логин</string>
    <string name="email">Эл.почта</string>
    <string name="helper">Придумайте пароль</string>
    <string name="SignUp">Создать аккаунт</string>
    <string name="passAgain">Повторите пароль</string>
    <string name="Cancel">Уже есть аккаунт?</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="catalog">Каталог</string>
    <string name="news">События</string>
    <string name="profile">Профиль</string>
    <string name="others">Прочее</string>
</resources>